[gd_scene load_steps=12 format=2]

[ext_resource path="res://Art Assets/paintMixMachine.png" type="Texture" id=1]
[ext_resource path="res://Devices/PaintMachine.gd" type="Script" id=2]
[ext_resource path="res://Art Assets/EKey.png" type="Texture" id=3]
[ext_resource path="res://Art Assets/UI Assets/ProgressBarSpritProgresse.png" type="Texture" id=4]
[ext_resource path="res://Art Assets/paintMixMachinSpittere.png" type="Texture" id=5]
[ext_resource path="res://Art Assets/UI Assets/ProgressBarSprite.png" type="Texture" id=6]
[ext_resource path="res://Art Assets/UI Assets/ProgressBarSpritBadProgresse.png" type="Texture" id=7]

[sub_resource type="ParticlesMaterial" id=4]
flag_disable_z = true
direction = Vector3( 0, 1, 0 )
spread = 81.18
flatness = 0.05
gravity = Vector3( 0, 98, 0 )
initial_velocity = 4.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[sub_resource type="CapsuleShape2D" id=1]
radius = 12.9641
height = 5.5973

[sub_resource type="Animation" id=2]
resource_name = "KeyPress"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("KeyPressSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("KeyPressSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("KeyPressSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("KeyPressSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[node name="PaintMachine" type="Node2D" groups=["PaintMachine"]]
script = ExtResource( 2 )

[node name="PaintMachineSprite" type="Sprite" parent="."]
position = Vector2( 0, -26 )
texture = ExtResource( 1 )

[node name="PaintSpittle" type="Particles2D" parent="."]
position = Vector2( -5, -29 )
emitting = false
amount = 5
lifetime = 0.38
speed_scale = 1.2
explosiveness = 0.1
randomness = 1.0
process_material = SubResource( 4 )

[node name="PaintMachineSpitterSprite" type="Sprite" parent="."]
position = Vector2( 0, -26 )
texture = ExtResource( 5 )

[node name="InteractArea" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractArea"]
position = Vector2( -13, -5 )
rotation = -1.04371
shape = SubResource( 1 )

[node name="KeyPressSprite" type="Sprite" parent="."]
position = Vector2( 3, -55 )
texture = ExtResource( 3 )
hframes = 4

[node name="KeyPressAnimator" type="AnimationPlayer" parent="."]
anims/KeyPress = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="PaintCanPosition" type="Position2D" parent="."]
position = Vector2( -4, -17 )

[node name="MenuPosition" type="Position2D" parent="."]
position = Vector2( -19, -70 )

[node name="GoodProgress" type="TextureProgress" parent="."]
visible = false
margin_left = -5.0
margin_top = -61.0
margin_right = 35.0
margin_bottom = -21.0
mouse_filter = 2
texture_under = ExtResource( 6 )
texture_progress = ExtResource( 4 )
fill_mode = 4

[node name="BadProgress" type="TextureProgress" parent="."]
visible = false
margin_left = -5.0
margin_top = -61.0
margin_right = 35.0
margin_bottom = -21.0
mouse_filter = 2
texture_under = ExtResource( 6 )
texture_progress = ExtResource( 7 )
fill_mode = 4

[node name="TextureTimer" type="Timer" parent="."]
wait_time = 0.2

[connection signal="body_entered" from="InteractArea" to="." method="_on_InteractArea_body_entered"]
[connection signal="body_exited" from="InteractArea" to="." method="_on_InteractArea_body_exited"]
[connection signal="timeout" from="TextureTimer" to="." method="_on_TextureTimer_timeout"]
